--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.188.0",
-    "body-parser": "^1.17.2",
-    "concurrently": "^3.5.0",
-    "cookie-session": "^2.0.0-beta.2",
-    "express": "^4.15.3",
+    "body-parser": "^1.19.0",
+    "concurrently": "^3.6.1",
+    "cookie-session": "^2.0.0-rc.1",
+    "express": "^4.17.1",
     "jest": "^26.0.1",
     "migrate-mongoose": "^4.0.0",
-    "mongoose": "^5.9.13",
-    "nodemon": "^2.0.3",
+    "mongoose": "^5.9.14",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "path-parser": "^2.0.2",
+    "path-parser": "^2.1.0",
     "puppeteer": "^3.0.4",
     "redis": "^3.0.2",
     "uuid": "^3.2.1"
